--- a/public/html/educators.html
+++ b/public/html/educators.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/educators.css" />
     <script
       src="https://code.jquery.com/jquery-3.7.1.js"
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../shared/styles/admin.css" />
-    <link rel="stylesheet" href="../shared/styles/popups.css" />
-    <link rel="stylesheet" href="../shared/styles/shared.css" />
+    <link rel="stylesheet" href="./admin.css" />
+    <link rel="stylesheet" href="./popups.css" />
+    <link rel="stylesheet" href="./shared.css" />
     <title>Преподаватели</title>
   </head>
   <body>
@@ -82,6 +81,6 @@
       </div>
     </div>
 
-    <script src="../js/educators.js"></script>
+    <script src="./educators.js"></script>
   </body>
 </html>
