--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Расписание КНИТУ-КАИ</title>
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <div class="container">
@@ -13,13 +13,13 @@
         <div class="navigation">
           <div class="card teachers">
             <a href="./teachers.html">
-              <img src="../imgs/teacher.png" alt="" />
+              <img src="./teacher.png" alt="" />
               <p>Расписание преподавателей</p>
             </a>
           </div>
           <div class="card students">
             <a href="./students.html">
-              <img src="../imgs/student.png" />
+              <img src="./student.png" />
               <p>Расписание студентов</p>
             </a>
           </div>
