--- a/public/html/students.html
+++ b/public/html/students.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Расписание преподавателей</title>
-    <link rel="stylesheet" href="../css/schedule.css" />
+    <title>Расписание студентов</title>
+    <link rel="stylesheet" href="./schedule.css" />
   </head>
   <body>
     <div class="container">
-      <h4>Расписание преподавателей</h4>
+      <h4>Расписание студентов</h4>
       <div class="input_group">
         <div>
-          <span>ФИО преподавателя:</span>
-          <input type="text" />
+          <span>Номер группы:</span>
+          <input type="number" />
           <button>Найти</button>
         </div>
         <div class="week">
@@ -40,7 +40,18 @@
         </div>
         <div class="day">
           <div>Пт</div>
-          <div class="lesson"></div>
+          <div class="lesson">
+            <div class="lesson__type">Лекция</div>
+            <div class="lesson__discipline">
+              Технологии программирования на платформе Java
+            </div>
+            <div class="lesson__time">8:00 - 9:30</div>
+            <div class="lesson__location">
+              <span>7 здание</span>
+              <span>333 ауд.</span>
+            </div>
+            <div class="lesson__lecturer">Тутбалин Павел Иннокентьевич</div>
+          </div>
           <div class="lesson"></div>
           <div class="lesson"></div>
         </div>
