--- a/public/html/admin.html
+++ b/public/html/admin.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Администратор</title>
-    <link rel="stylesheet" href="../css/admin.css" />
+    <link rel="stylesheet" href="./admin.css" />
+    <link rel="stylesheet" href="./shared.css" />
   </head>
   <body>
     <div class="container">
