CRUD + search for frontend disciplines

--- a/public/html/admin.html
+++ b/public/html/admin.html
@@ -14,7 +14,7 @@
           <a href="./educators.html">Преподаватели</a>
         </div>
         <div class="action">
-          <a href="">Дисциплины</a>
+          <a href="./disciplines.html">Дисциплины</a>
         </div>
         <div class="action">
           <a href="">Кафедры</a>
