--- a/public/html/departments.html
+++ b/public/html/departments.html
@@ -21,8 +21,9 @@
           <a href="./departments.html">Кафедры</a>
         </div>
         <div class="action">
-          <a href="">Группы</a>
+          <a href="./groups.html">Группы</a>
         </div>
+        <div class="action">Здания</div>
         <div class="action">
           <a href="">Расписание</a>
         </div>
