--- a/public/html/educators.html
+++ b/public/html/educators.html
@@ -28,6 +28,7 @@
         <div class="action">
           <a href="">Группы</a>
         </div>
+        <div class="action">Здания</div>
         <div class="action">
           <a href="">Расписание</a>
         </div>
