--- a/public/html/groups.html
+++ b/public/html/groups.html
@@ -34,6 +34,43 @@
         <div class="groups"></div>
         <button class="add">Добавить</button>
       </div>
+      <div class="overlay">
+        <div class="popup delete-popup">
+          <a href="#" class="closePopup">X</a>
+          <form id="deleteForm">
+            <p>Вы действительно хотите удалить эту группу</p>
+            <input type="hidden" name="id" />
+            <button type="submit" class="deleteConfirm">Удалить</button>
+          </form>
+        </div>
+
+        <div class="popup edit-popup">
+          <a href="#" class="closePopup">X</a>
+          <form id="editCreateForm">
+            <h2></h2>
+            <input type="hidden" required name="id" />
+            <input
+              type="number"
+              required
+              name="group_code"
+              placeholder="Номер группы"
+            />
+            <button type="submit">Сохранить</button>
+          </form>
+        </div>
+
+        <div class="popup info-popup">
+          <a href="#" class="closePopup">X</a>
+          <h2></h2>
+          <button onclick="closeModal()">Закрыть</button>
+        </div>
+      </div>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./groups.js"></script>
   </body>
 </html>
