--- a/public/html/students.html
+++ b/public/html/students.html
@@ -5,60 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Расписание студентов</title>
     <link rel="stylesheet" href="./schedule.css" />
+    <link rel="stylesheet" href="./popups.css">
   </head>
   <body>
-    <a href="#" onclick="window.history.back(); return false;" class="backlink"> &#8249 Назад</a>
+    <a href="/index.html" class="backlink"> &#8249 Назад</a>
     <div class="container">
       <h4>Расписание студентов</h4>
-      <div class="input_group">
+      <form id='find-by-group' class="input_group">
         <div>
           <span>Номер группы:</span>
-          <input type="number" />
-          <button>Найти</button>
+          <input type="number" name="group_code" list="groups" required/>
+          <button type="submit">Найти</button>
         </div>
         <div class="week">
           <p id="weekLabel"></p>
-          <input type="checkbox" id="week" />
+          <input type="checkbox" id="week" name="week_parity"/>
           <label for="week" class="toggle"></label>
         </div>
-      </div>
+      </form>
       <div class="schedule">
-        <div class="day">
-          <div>Пн</div>
-          <div class="lesson"></div>
-          <div class="lesson"></div>
-        </div>
-        <div class="day">
-          <div>Вт</div>
-        </div>
-        <div class="day">
-          <div>Ср</div>
-          <div class="lesson"></div>
-        </div>
-        <div class="day">
-          <div>Чт</div>
-          <div class="lesson"></div>
-          <div class="lesson"></div>
-        </div>
-        <div class="day">
-          <div>Пт</div>
-          <div class="lesson">
-            <div class="lesson__type">Лекция</div>
-            <div class="lesson__discipline">
-              Технологии программирования на платформе Java
-            </div>
-            <div class="lesson__time">8:00 - 9:30</div>
-            <div class="lesson__location">
-              <span>7 здание</span>
-              <span>333 ауд.</span>
-            </div>
-            <div class="lesson__lecturer">Тутбалин Павел Иннокентьевич</div>
-          </div>
-          <div class="lesson"></div>
-          <div class="lesson"></div>
-        </div>
-        <div class="day">
-          <div>Сб</div>
+        
+      </div>
+      <div class="overlay">
+        <div class="popup lesson-details">
+            
         </div>
       </div>
     </div>
@@ -68,5 +38,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./schedule.js"></script>
+    <script src="./students.js"></script>
   </body>
 </html>
