Add page with educator schedule and admin

--- a/public/html/admin.html
+++ b/public/html/admin.html
@@ -20,10 +20,10 @@
           <a href="">Кафедры</a>
         </div>
         <div class="action">
-          <a href="">Группы</a>
+          <a href="./groups.html">Группы</a>
         </div>
-        <div class="action">Здания</div>
-        <div class="action">Расписание</div>
+        <div class="action"><a href="./buildings.html">Здание</a></div>
+        <div class="action"><a href="./scheduling.html">Расписание</a></div>
       </div>
     </div>
   </body>
