--- a/public/html/students.html
+++ b/public/html/students.html
@@ -6,6 +6,7 @@
     <title>Расписание студентов</title>
     <link rel="stylesheet" href="./schedule.css" />
     <link rel="stylesheet" href="./popups.css">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   </head>
   <body>
     <a href="/index.html" class="backlink"> &#8249 Назад</a>
@@ -14,7 +15,9 @@
       <form id='find-by-group' class="input_group">
         <div>
           <span>Номер группы:</span>
-          <input type="number" name="group_code" list="groups" required/>
+          <select class="group-select input-select" required>
+            <option></option>
+          </select>
           <button type="submit">Найти</button>
         </div>
         <div class="week">
@@ -37,6 +40,7 @@
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="./schedule.js"></script>
     <script src="./students.js"></script>
   </body>
