Передлать все селекты с использованием selec2

--- a/public/html/students.html
+++ b/public/html/students.html
@@ -15,7 +15,7 @@
       <form id='find-by-group' class="input_group">
         <div>
           <span>Номер группы:</span>
-          <select class="group-select input-select" required>
+          <select class="group-select" required>
             <option></option>
           </select>
           <button type="submit">Найти</button>
