--- a/public/html/scheduling.html
+++ b/public/html/scheduling.html
@@ -74,7 +74,7 @@
                 </select>
               </div>
 
-              <div class="conrol">
+              <div class="control">
                 <label>Вид занятия</label>
                 <select name="lesson-type" id="lesson-type" required>
                   <option value="" selected disabled>Вид занятия</option>
