--- a/public/html/admin.html
+++ b/public/html/admin.html
@@ -11,19 +11,19 @@
     <div class="container">
       <div class="sidebar">
         <div class="action">
-          <a href="./educators.html">Преподаватели</a>
+          <a href="/educators">Преподаватели</a>
         </div>
         <div class="action">
-          <a href="./disciplines.html">Дисциплины</a>
+          <a href="/disciplines">Дисциплины</a>
         </div>
         <div class="action">
-          <a href="">Кафедры</a>
+          <a href="/departments">Кафедры</a>
         </div>
         <div class="action">
-          <a href="./groups.html">Группы</a>
+          <a href="/groups">Группы</a>
         </div>
-        <div class="action"><a href="./buildings.html">Здание</a></div>
-        <div class="action"><a href="./scheduling.html">Расписание</a></div>
+        <div class="action"><a href="/buildings">Здания</a></div>
+        <div class="action"><a href="/scheduling">Расписание</a></div>
       </div>
     </div>
   </body>
