--- a/public/html/buildings.html
+++ b/public/html/buildings.html
@@ -12,21 +12,19 @@
     <div class="container">
       <div class="sidebar">
         <div class="action">
-          <a href="./educators.html">Преподаватели</a>
+          <a href="/educators">Преподаватели</a>
         </div>
         <div class="action">
-          <a href="#">Дисциплины</a>
+          <a href="/disciplines">Дисциплины</a>
         </div>
         <div class="action">
-          <a href="./departments.html">Кафедры</a>
+          <a href="/departments">Кафедры</a>
         </div>
         <div class="action">
-          <a href="">Группы</a>
+          <a href="/groups">Группы</a>
         </div>
-        <div class="action current-action"><a href="">Здания</a></div>
-        <div class="action">
-          <a href="">Расписание</a>
-        </div>
+        <div class="action"><a href="/buildings">Здания</a></div>
+        <div class="action"><a href="/scheduling">Расписание</a></div>
       </div>
 
       <div class="content">
