--- a/public/html/departments.html
+++ b/public/html/departments.html
@@ -12,22 +12,21 @@
     <div class="container">
       <div class="sidebar">
         <div class="action">
-          <a href="./educators.html">Преподаватели</a>
+          <a href="/educators">Преподаватели</a>
         </div>
         <div class="action">
-          <a href="./disciplines.html">Дисциплины</a>
-        </div>
-        <div class="action current-action">
-          <a href="./departments.html">Кафедры</a>
+          <a href="/disciplines">Дисциплины</a>
         </div>
         <div class="action">
-          <a href="./groups.html">Группы</a>
+          <a href="/departments">Кафедры</a>
         </div>
-        <div class="action">Здания</div>
         <div class="action">
-          <a href="">Расписание</a>
+          <a href="/groups">Группы</a>
         </div>
+        <div class="action"><a href="/buildings">Здания</a></div>
+        <div class="action"><a href="/scheduling">Расписание</a></div>
       </div>
+
       <div class="content">
         <h1>Кафедры</h1>
         <input type="text" id="search" placeholder="Поиск" oninput="" />
