--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,13 +12,13 @@
         <h1 class="main-title">Расписание занятий КНИТУ-КАИ</h1>
         <div class="navigation">
           <div class="card teachers">
-            <a href="./teachers.html">
+            <a href="/teachers">
               <img src="./teacher.png" alt="" />
               <p>Расписание преподавателей</p>
             </a>
           </div>
           <div class="card students">
-            <a href="./students.html">
+            <a href="/students">
               <img src="./student.png" />
               <p>Расписание студентов</p>
             </a>
