--- a/public/html/disciplines.html
+++ b/public/html/disciplines.html
@@ -9,25 +9,22 @@
     <link rel="stylesheet" href="./admin.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="sidebar">
-        <div class="action">
-          <a href="./educators.html">Преподаватели</a>
-        </div>
-        <div class="action current-action">
-          <a href="#">Дисциплины</a>
-        </div>
-        <div class="action">
-          <a href="./departments.html">Кафедры</a>
-        </div>
-        <div class="action">
-          <a href="">Группы</a>
-        </div>
-        <div class="action"><a href="">Здания</a></div>
-        <div class="action">
-          <a href="">Расписание</a>
-        </div>
+    <div class="sidebar">
+      <div class="action">
+        <a href="/educators">Преподаватели</a>
       </div>
+      <div class="action">
+        <a href="/disciplines">Дисциплины</a>
+      </div>
+      <div class="action">
+        <a href="/departments">Кафедры</a>
+      </div>
+      <div class="action">
+        <a href="/groups">Группы</a>
+      </div>
+      <div class="action"><a href="/buildings">Здания</a></div>
+      <div class="action"><a href="/scheduling">Расписание</a></div>
+    </div>
       <div class="content">
         <h1>Дисциплины</h1>
         <input type="text" id="search" placeholder="Поиск" />
