--- a/public/html/students.html
+++ b/public/html/students.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   </head>
   <body>
-    <a href="/index.html" class="backlink"> &#8249 Назад</a>
+    <a href="/" class="backlink"> &#8249 Назад</a>
     <div class="container">
       <h4>Расписание студентов</h4>
       <form id='find-by-group' class="input_group">
